more rpx configuration.

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,1 +1,3 @@
-<div class="span-24">You have been successfully logged in! Would you like to logout?</div>
+<div class="span-24">You have been successfully logged in!
+
+  Would you like to <%= link_to "Logout?", :controller => 'sessions', :action => 'destroy' %></div>
