cleaning up ui a bit.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,4 @@
 <%= stylesheet_link_tag "screen", :media => :screen %>
 <%= stylesheet_link_tag "print", :media => :print %>
+<%= stylesheet_link_tag "global", :media => :screen %>
 <!--[if lt IE 8]><%= stylesheet_link_tag "ie", :media => :screen %><![endif]-->
