--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -8,7 +8,9 @@
 <body>
 
 <div class="container">
-  <p style="color: green"><%= flash[:notice] %></p>
+  <% if flash[:notice] %>
+      <p class="notice"><%= flash[:notice] %></p>
+  <% end %>
   <%= yield %>
 </div>
 
