--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="span-24 form-title prepend-top last">
+<div class="span-24 section-title prepend-top last">
   Sign up as a new user
 </div>
 <div class="span-24 last" style="padding-bottom: 5px;">
