--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -1,4 +1,9 @@
-.form-title {
+.section-title {
     font-weight: bold;
     font-size: 2em;
+}
+
+.line-box {
+    border: 1px solid black;
+    padding: 3px 5px 3px 5px;
 }
