--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -4,8 +4,10 @@
 <div class="span-8 append-16 prepend-top last">
   <div class="line-box">
     <div class="section-title">User Information</div>
-    Name: <%= @current_user.name %><br />
-    Login: <%= @current_user.login %><br />
+    Name: <%= @current_user.name %>
+    <br/>
+    Login: <%= @current_user.login %>
+    <br/>
     Email: <%= @current_user.email %>
   </div>
 </div>
@@ -22,12 +24,22 @@
           <% @mappings.each do |mapping| %>
               <li><%= h mapping %> -
                 <%= link_to "X", :controller => :sessions,
-                            :action => "rpx_unmap", :openid => identifier %>
+                            :action => "rpx_unmap", :openid => mapping %>
               </li>
           <% end %>
         </ul>
     <% end %>
 
-    <%= link_to "Add an OpenID to your account", rpx_map_url, :class => 'rpxnow' %>
+    <a class="rpxnow" onclick="return false;"
+       href="<%= rpx_map_url %>">
+      Add an OpenID to your account
+    </a>
   </div>
 </div>
+
+<script src="https://rpxnow.com/openid/v2/widget"
+        type="text/javascript"></script>
+<script type="text/javascript">
+    RPXNOW.overlay = true;
+    RPXNOW.language_preference = 'en';
+</script>
