starting to setup inline editing.

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -4,11 +4,11 @@
 <div class="span-8 append-16 prepend-top last">
   <div class="line-box">
     <div class="section-title">User Information</div>
-    Name: <%= @current_user.name %>
+    Name: <span class="editable"><%= @current_user.name %></span>
     <br/>
-    Login: <%= @current_user.login %>
+    Login: <span class="editable"><%= @current_user.login %></span>
     <br/>
-    Email: <%= @current_user.email %>
+    Email: <span class="editable"><%= @current_user.email %></span>
   </div>
 </div>
 <div class="span-8 append-16 prepend-top last">
