--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,10 @@
 </div>
 <% @user.password = @user.password_confirmation = nil %>
 
+open id: <%= @open_id %>  
+
+
+
 <%= error_messages_for :user, :class => 'error' %>
 <% form_for :user, :url => users_path do |f| -%>
 
