--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,8 +8,10 @@
 
 <script type="text/javascript">
     google.load('jquery', '1.3.2');
+    google.load('jqueryui', '1.7.2');
 </script>
 
+<%= javascript_include_tag "jquery.jeditable" %>
 <%= javascript_include_tag "global" %>
 
 <script type="text/javascript">
